--- a/auctions/templates/auctions/new.html
+++ b/auctions/templates/auctions/new.html
@@ -77,6 +77,13 @@
             </select>
         </div>
 
+        <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" name="is_active" id="is_active" checked>
+            <label class="form-check-label" for="is_active">
+                Is active?
+            </label>
+        </div>
+
         <button class="btn btn-primary">Save</button>
     </form>
 </div>
