feat: add first impl of posting bids

--- a/auctions/templates/auctions/details.html
+++ b/auctions/templates/auctions/details.html
@@ -38,6 +38,21 @@
         <p class="text-muted mb-2 text-truncate text-dark">Start on: {{ auction.start_date }} and end on: {{ auction.end_date }}</p>
     </div>
     <div>
+        {% if user.is_authenticated %}
+            <form action="{% url 'place_bid' auction.id %}" method="post" class="d-flex align-items-end w-100">
+                {% csrf_token %}
+                <div class="form-group mb-0 mr-2 flex-grow-1">
+                    <label for="bid">Place a bid</label>
+
+                    {% if highest_bid %}
+                        <input class="form-control" type="text" name="bid" id="bid" placeholder="Minimum Bid: {{ highest_bid.value }}" required>
+                    {% else %}
+                        <input class="form-control" type="text" name="bid" id="bid" placeholder="Minimum Bid: {{ auction.minimum_bid_value }}" required>
+                    {% endif %}
+                </div>
+                <button class="btn btn-light">Bid</button>
+            </form>
+        {% endif %}
     </div>
 </main>
 {% endblock %}
