--- a/auctions/templates/auctions/new.html
+++ b/auctions/templates/auctions/new.html
@@ -1,8 +1,8 @@
 {% extends "auctions/layout.html" %} {% block body %}
 
 
-<div class="container">
-    <h1 class="mb-4">New Listing</h1>
+<main class="container">
+    <h2 class="mb-4">New Listing</h2>
 
     <form method="POST" action="{% url 'new_listing' %}">
         {% csrf_token %}
@@ -86,6 +86,6 @@
 
         <button class="btn btn-primary">Save</button>
     </form>
-</div>
+</main>
 {% endblock %}
 
