--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,20 @@
 body {
     padding: 10px;
 }
+
+:is(.no-hover, .no-hover:hover, .no-hover *:hover) {
+    text-decoration: none;
+}
+
+.active-auctions {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+    grid-template-rows: masonry;
+    gap: 16px;
+}
+
+@media (min-width: 1024px) {
+    .active-auctions {
+        grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+    }
+}
