--- a/auctions/templates/auctions/details.html
+++ b/auctions/templates/auctions/details.html
@@ -14,6 +14,10 @@
         grid-column: 1 / -1;
         grid-row: 1 / 2;
     }
+
+    .mb-20 {
+        margin-bottom: 20px;
+    }
 </style>
 
 <main class="container auction">
@@ -46,7 +50,7 @@
     </div>
     <div>
         {% if user.is_authenticated %}
-            <form action="{% url 'place_bid' auction.id %}" method="post" class="d-flex align-items-end w-100">
+            <form action="{% url 'place_bid' auction.id %}" method="post" class="d-flex align-items-end w-100 mb-20">
                 {% csrf_token %}
                 <div class="form-group mb-0 mr-2 flex-grow-1">
                     <label for="bid">Place a bid</label>
@@ -58,6 +62,15 @@
                     {% endif %}
                 </div>
                 <button class="btn btn-light">Bid</button>
+            </form>
+            <form action="{% url 'toggle_watchlist' auction.id %}" method="post">
+                {% csrf_token %}
+                
+                {% if is_watched %}
+                    <button class="btn btn-danger">Remove from watchlist</button>
+                {% else %}
+                    <button class="btn btn-primary">Add to watchlist</button>
+                {% endif %}
             </form>
         {% endif %}
     </div>
