--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'watchlist' %}">
-                        Watchlist
+                        Watchlist ({{ watchlist_count }})
                     </a>
                 </li>
                 <li class="nav-item">
