--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -27,6 +27,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'auctions_won' %}">
+                        Auctions Won
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'watchlist' %}">
                         Watchlist ({{ watchlist_count }})
                     </a>
