--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -11,6 +11,11 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
     grid-template-rows: masonry;
     gap: 16px;
+
+    & .empty {
+        grid-column: 1 / -1;
+        text-align: center;
+    }
 }
 
 @media (min-width: 1024px) {
