feat: add protection into routes

--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -10,6 +10,8 @@
 
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ request.GET.next }}">
+
         <div class="form-group">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
