refactor: improve navbar, login and register

--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+<main class="container">
     <h2>Login</h2>
 
     {% if message %}
@@ -22,5 +23,6 @@
     </form>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+</main>
 
 {% endblock %}
